# hedgedoc-tag-searcher

./: .flaskenv  .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
plzidx/: __init__.py  cli.py  command.py  config_template.py  dashboard.py  db.py  hedgedoc.py  hedgedocdb.py  plzidx.py  views.py
plzidx/static/css/: .gitignore  plzidx.css
plzidx/templates/: base.html  dashboard.html  index.html  pads.html
